--- a/partial-about.html
+++ b/partial-about.html
@@ -1,6 +1,7 @@
-<div class="jumbotrom text-center">
+<div class="jumbotron text-center">
     <h1>The About Page</h1>
-    <p>This page demonstrates <span class="text-danger">multiple</span> and <span class="text-danger">named</span> views.</p>
+    <p>This page demonstrates <span class="text-danger">multiple</span> and <span class="text-danger">named</span>
+        views.</p>
 </div>
 
 <div class="row">
